[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/BaseTile.gd" type="Script" id=1]
[ext_resource path="res://Sprites/KeySprite.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Tiles/tile_w.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tiles/border_corner.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tiles/border_edge.png" type="Texture" id=5]
[ext_resource path="res://Sprites/IceSprite.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Tiles/arrow.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Partial/SpikeAnimation.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/Tiles/tile_f.png" type="Texture" id=9]
[ext_resource path="res://Sprites/selection_border.png" type="Texture" id=10]
[ext_resource path="res://Sprites/selection_hover.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="Tile" type="Node2D" groups=["tile"]]
position = Vector2( 0, 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BorderCorners" type="Node2D" parent="."]
z_index = -2

[node name="TopLeft" type="Sprite" parent="BorderCorners"]
position = Vector2( -6, -8 )
texture = ExtResource( 4 )

[node name="TopRight" type="Sprite" parent="BorderCorners"]
position = Vector2( 6, -8 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )

[node name="RightTop" type="Sprite" parent="BorderCorners"]
position = Vector2( 8, -6 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="RightBottom" type="Sprite" parent="BorderCorners"]
position = Vector2( 9, 6 )
rotation = 4.71239
texture = ExtResource( 4 )

[node name="BottomLeft" type="Sprite" parent="BorderCorners"]
position = Vector2( -6, 9 )
texture = ExtResource( 4 )

[node name="BottomRight" type="Sprite" parent="BorderCorners"]
position = Vector2( 6, 9 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )

[node name="LeftBottom" type="Sprite" parent="BorderCorners"]
position = Vector2( -8, 6 )
rotation = -1.5708
texture = ExtResource( 4 )

[node name="LeftTop" type="Sprite" parent="BorderCorners"]
position = Vector2( -9, -6 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="EdgeBorderCorners" type="Node2D" parent="."]
z_index = -1

[node name="TopLeft" type="Sprite" parent="EdgeBorderCorners"]
visible = false
position = Vector2( -6, -6 )
texture = ExtResource( 5 )
offset = Vector2( -0.5, -0.5 )

[node name="TopRight" type="Sprite" parent="EdgeBorderCorners"]
visible = false
position = Vector2( 6, -6 )
texture = ExtResource( 5 )
offset = Vector2( 0.5, -0.5 )
flip_h = true

[node name="BottomLeft" type="Sprite" parent="EdgeBorderCorners"]
visible = false
position = Vector2( -6, 6 )
texture = ExtResource( 5 )
offset = Vector2( -0.5, 0.5 )
flip_v = true

[node name="BottomRight" type="Sprite" parent="EdgeBorderCorners"]
visible = false
position = Vector2( 6, 6 )
texture = ExtResource( 5 )
offset = Vector2( 0.5, 0.5 )
flip_h = true
flip_v = true

[node name="Sprite" type="Node2D" parent="."]
modulate = Color( 0.51, 0.51, 0.51, 1 )

[node name="ChasmSprite" type="Sprite" parent="Sprite"]
visible = false

[node name="FloorSprite" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 9 )

[node name="WallSprite" type="Sprite" parent="Sprite"]
position = Vector2( 0, -0.5 )
texture = ExtResource( 3 )

[node name="IceSprite" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 6 )

[node name="SpikesSprite" type="AnimatedSprite" parent="Sprite"]
visible = false
frames = SubResource( 2 )

[node name="FloorSprite" type="Sprite" parent="Sprite/SpikesSprite"]
texture = ExtResource( 9 )

[node name="Spike2" parent="Sprite/SpikesSprite" instance=ExtResource( 8 )]
position = Vector2( -24, -10.5 )
z_index = 1

[node name="SpikeOutline" parent="Sprite/SpikesSprite/Spike2" index="1"]
visible = false

[node name="Spike1" parent="Sprite/SpikesSprite" instance=ExtResource( 8 )]
position = Vector2( -28, -19 )

[node name="SpikeOutline" parent="Sprite/SpikesSprite/Spike1" index="1"]
visible = false
modulate = Color( 1, 1, 1, 1 )

[node name="DoorSprite" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 0, 5 )
texture = ExtResource( 7 )

[node name="KeySprite" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 2 )

[node name="Selection" type="Node2D" parent="."]

[node name="Move" type="Sprite" parent="Selection"]
visible = false
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
texture = ExtResource( 10 )

[node name="MoveHover" type="Sprite" parent="Selection"]
visible = false
self_modulate = Color( 0.75, 0.75, 0.75, 1 )
texture = ExtResource( 11 )

[node name="Attack" type="Sprite" parent="Selection"]
visible = false
self_modulate = Color( 0.62, 0.62, 0.62, 1 )
texture = ExtResource( 10 )

[node name="AttackHover" type="Sprite" parent="Selection"]
visible = false
self_modulate = Color( 0.62, 0.62, 0.62, 1 )
texture = ExtResource( 11 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
shape = SubResource( 1 )

[connection signal="input_event" from="KinematicBody2D" to="." method="_on_KinematicBody2D_input_event"]
[connection signal="mouse_entered" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_exited"]

[editable path="Sprite/SpikesSprite/Spike2"]
[editable path="Sprite/SpikesSprite/Spike1"]
